--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -79,7 +79,11 @@
                 <span> {% trans 'Upload Sheet'  %} </span></a>
         </li>
 
-       
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'home-list' %}">
+                <i class="fas fa-fw fa-chart-area"></i>
+                <span> {% trans 'Reciept'  %} </span></a>
+        </li>
         
        <!--  <li class="nav-item">
             <a class="nav-link" href="#">
