--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -44,11 +44,11 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
-            <!-- <li class="nav-item active">
+            <li class="nav-item active">
                 <a class="nav-link" href="#">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
                     <span>{% trans 'Dashboard' %}</span></a>
-            </li> -->
+            </li>
 
            
             <!-- Heading -->
@@ -140,7 +140,7 @@
              {% trans  'Reports' %}
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="{% url 'report_1' %}">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span> {% trans 'Get Recent Documents' %}</span></a>
             </li>
